--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,10 +59,11 @@ body.light-theme {
 }
 
 .modal-form {
-  width: 100%;
+  width: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding:20px;
 }
 
 .modal-content .comment {
@@ -98,7 +99,11 @@ body.light-theme {
   margin-top: 30px;
   display: flex;
   justify-content: space-between;
-  width: 70%;
+  width: 100%;
+}
+
+.modal .buttons button:last-of-type {
+  margin-left: auto;
 }
 
 /* Button Styles */
@@ -156,7 +161,7 @@ footer button {
 
 /* Timer Styles */
 #confirmation-message {
-  margin: 20px 0;
+
 }
 
 #timer-display {
@@ -175,6 +180,7 @@ footer button {
   min-height: 450px;
   min-width: 350px;
   opacity: 95%;
+  padding-bottom:0;
 }
 
 
@@ -305,7 +311,7 @@ input#include-weekends {
 }
 
 .modal-config .config-section {
-  width: 400px;
+  min-width: 420px;
 }
 .modal-config .config-section .form-group {
   width: 100%;
@@ -319,7 +325,6 @@ input#include-weekends {
 #configForm {
   overflow: hidden scroll;
   height: calc(90vh - 120px);
-  padding: 20px 20px 50px 20px;
 }
 
 
