--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,7 +67,8 @@ body.light-theme {
 }
 
 .modal-content .comment {
-  min-width: 70%;
+  min-width: 300px;
+  width:70%;
   min-height: 60px;
   resize: vertical;
 }
@@ -99,7 +100,7 @@ body.light-theme {
   margin-top: 30px;
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: 70%;
 }
 
 .modal .buttons button:last-of-type {
@@ -173,7 +174,7 @@ footer button {
   left: unset;
   position: fixed;
   bottom: 52px;
-  right: 115px;
+  right: 80px;
   transform: unset;
   box-shadow: none;
   resize: none;
@@ -324,9 +325,13 @@ input#include-weekends {
 
 #configForm {
   overflow: hidden scroll;
-  height: calc(90vh - 120px);
+  max-height: calc(90vh - 120px);
+  padding: 20px 40px;
 }
 
+#configForm .buttons {
+  width: 100%;
+}
 
 
 #configModal {
