--- a/views/timerModal.njk
+++ b/views/timerModal.njk
@@ -8,6 +8,17 @@
       <label for="comment-timer">Comment:</label>
       <textarea class="comment" id="comment-timer" name="comment"></textarea>
       
+      <div class="time-fields">
+        <div class="time-field">
+          <label for="start-time-timer">Start Time:</label>
+          <input type="datetime-local" id="start-time-timer" name="startTime">
+        </div>
+        <div class="time-field">
+          <label for="end-time-timer">End Time:</label>
+          <input type="datetime-local" id="end-time-timer" name="endTime">
+        </div>
+      </div>
+      
       <div class="timer-display" id="timer-display">0m</div>
       
       <div class="form-group">
