--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,6 +86,27 @@ body.light-theme {
   align-items: center;
 }
 
+.modal-content .time-fields {
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+  margin-bottom: 15px;
+}
+
+.modal-content .time-field {
+  display: flex;
+  flex-direction: column;
+  width: 48%;
+}
+
+.modal-content .time-field label {
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.modal-content .time-field input {
+  width: 100%;
+}
 .modal-content .search-options input {
   flex-grow: 0;
 }
