--- a/views/layout.njk
+++ b/views/layout.njk
@@ -1,32 +1,23 @@
-{% import "modals.njk" as modals %}
 <!DOCTYPE html>
 <html>
-    <head>  
-        <title>Plywood - Jira Worklog Management</title>
+    <head>
+        <title>{% block title %}Plywood - Jira Worklog Management{% endblock %}</title>
         <link href='/stylesheets/style.css' rel='stylesheet' />
         <link href='/stylesheets/dark.css' rel='stylesheet' />
         <meta http-equiv='Content-Security-Policy' content="font-src data:" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="jira-url" content="{{ jiraUrl }}">
         <meta charset='utf-8' />
-        <link
-        rel="stylesheet"
-        href="/stylesheets/choices.min.css"
-        />
-
+        <link rel="stylesheet" href="/stylesheets/choices.min.css" />
         <link type="image/png" sizes="96x96" rel="icon" href="/images/icons8-plywood-96.png">
 
         <script src="/javascripts/choices.min.js"></script>
-        <script src="/javascripts/moment.min.js" ></script>
-        <script src="/javascripts/fullcalendar.min.js" ></script>
+        <script src="/javascripts/moment.min.js"></script>
         <script src="/javascripts/moment-duration-format.js"></script>
 
+        {% block head %}{% endblock %}
     </head>
-
     <body>
-        {{ modals.modals() }}
-        <div id='calendar'></div>
-
         <footer class="app-footer">
             <div class="footer-left">
                 <div class="hamburger-menu">
@@ -54,31 +45,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer-controls">
-                    <div class="control-group">
-                        <input type="range" min="1" max="4" step="1" value="2" id="zoom-range" name="zoom-range">
-                        <output for="zoom-range" id="zoom-output">15 minutes / slot</output>
-                    </div>
-                    <div class="control-group">
-                        <input type="checkbox" id="include-weekends" name="include-weekends">
-                        <label for="include-weekends">Weekends</label>
-                    </div>
-                </div>
             </div>
-            <div id="total-time" class="footer-center">
-                <h3>Total time:</h3>
-                <div id="total-time-value"></div>
-            </div>
-            <div class="footer-right">
-                <div id="loading-container">
-                    <img id="loading" src="/images/icons8-dots-loading.gif" style="background-color:transparent"/>
-                </div>
-                <button id="open-timer-modal-btn" title="Timer" onclick="toggleTimerModal()">⏱️</button>
+            <div id="loading-container">
+                <img id="loading" src="/images/icons8-dots-loading.gif" style="background-color:transparent"/>
             </div>
         </footer>
 
-        <script src="/javascripts/plywood/main.js" type="module" ></script>
+        {% block content %}{% endblock %}
+
         <script src="https://unpkg.com/@popperjs/core@2"></script>
         <script src="https://unpkg.com/tippy.js@6"></script>
+        <script src="/javascripts/plywood/ui.js" type="module"></script>
+        {% block scripts %}{% endblock %}
     </body>
 </html>
