--- a/views/layout.njk
+++ b/views/layout.njk
@@ -14,6 +14,7 @@
         <script src="/javascripts/choices.min.js"></script>
         <script src="/javascripts/moment.min.js"></script>
         <script src="/javascripts/moment-duration-format.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
         {% block head %}{% endblock %}
     </head>
