Added persistent config and modals accross pages, better multi user support (Still untested)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -356,6 +356,7 @@ input#include-weekends {
   margin-left: 20px;
 }
 
+
 /* Event Title */
 .plywood-event-title {
   white-space: nowrap;
@@ -378,11 +379,26 @@ input#include-weekends {
   filter: contrast(1.3) brightness(0.60) contrast(9999) invert(100) contrast(9999) grayscale(1) contrast(9999); /* Adjust the text color based on the background */
 }
 
+.fc-event-main {
+  filter: none;
+}
+
+.fc-event {
+  color: #fff !important;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.dark-theme .fc-event {
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+}
+
 .issue-type-icon {
   display: inline-block;
-  vertical-align: text-top; /* Align the icon vertically in the middle */
-  margin-right: 2px; /* Add some space between the icon and the title */
-  margin-bottom: 2px;
+  vertical-align: middle;
+  height: 16px;
+  width: 16px;
+  margin-right: 4px;
+  background-color: transparent !important;
 }
 
 .fc-timegrid-event-harness-inset .fc-timegrid-event, .fc-timegrid-event.fc-event-mirror, .fc-timegrid-more-link {
