--- a/views/layout.njk
+++ b/views/layout.njk
@@ -16,6 +16,7 @@
         <script src="/javascripts/moment.min.js"></script>
         <script src="/javascripts/moment-duration-format.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="/javascripts/plywood/timer.js" type="module"></script>
 
         {% block head %}{% endblock %}
     </head>
