--- a/public/stylesheets/sass/_forms.scss
+++ b/public/stylesheets/sass/_forms.scss
@@ -123,7 +123,7 @@ select {
     display: inline-block;
 
     &__inner {
-        width: calc(100% - 17px);
+        width: calc(100% - 17px)!important;
         background: #fff;
         border-color: $border-color;
 
