Make issue color in update modal disabled temporarily

--- a/views/updateModal.njk
+++ b/views/updateModal.njk
@@ -12,7 +12,7 @@
         
         
         <label for="issue-key-color">Issue Color:</label>
-        <input type="color" id="issue-key-color" read-only="true" name="issueKeyColor" class="issue-key-color-update" value="#000000">
+        <input type="color" id="issue-key-color" disabled="true" name="issueKeyColor" class="issue-key-color-update" value="#000000">
         
         
         <label for="comment-update">Comment:</label>
